ADD test AND FINISH project